tests/types/errors/legacy_import_statement.mog
import { Add } from "./modules/math.mog"
